--- a/web_flask/templates/10-hbnb_filters.html
+++ b/web_flask/templates/10-hbnb_filters.html
@@ -6,23 +6,23 @@
     <title>HBNB</title>
     <link
       rel="icon"
-      href="{{ url_for ('static', filename='images/icon.ico') }}"
+      href="{{ url_for('static', filename='images/icon.ico') }} "
     />
     <link
       rel="stylesheet"
-      href="{{ url_for ('static', filename='styles/3-header.css') }}"
+      href="{{ url_for('static', filename='styles/3-header.css') }}"
     />
     <link
       rel="stylesheet"
-      href="{{ url_for ('static', filename='styles/3-footer.css') }}"
+      href="{{ url_for('static', filename='styles/3-footer.css') }}"
     />
     <link
       rel="stylesheet"
-      href="{{ url_for ('static', filename='styles/4-common.css') }}"
+      href="{{ url_for('static', filename='styles/4-common.css') }}"
     />
     <link
       rel="stylesheet"
-      href="{{ url_for ('static', filename='styles/6-filters.css') }}"
+      href="{{ url_for('static', filename='styles/6-filters.css') }}"
     />
   </head>
   <body>
@@ -30,43 +30,37 @@
       <div id="header_logo"></div>
     </header>
     <div class="container">
-      <section class="filter">
+      <section class="filters">
         <button>Search</button>
         <div class="locations">
           <h3>States</h3>
           <h4>&nbsp;</h4>
           <ul class="popover">
-            (% for state in states %)
+            {% for state in states|sort(attribute='name') %}
             <li>
               <h2>{{ state.name }}</h2>
               <ul>
-                (% for city in state.cities %)
-                <li>
-                  <h4>{{ city.name }}</h4>
-                </li>
-                (% endfor %)
+                {% for city in state.cities|sort(attribute='name') %}
+                <li><h4>{{ city.name }}</h4></li>
+                {% endfor %}
               </ul>
             </li>
-            (% endfor %)
+            {% endfor %}
           </ul>
         </div>
         <div class="amenities">
           <h3>Amenities</h3>
           <h4>&nbsp;</h4>
           <ul class="popover">
-            (% for amenity in amenities %)
-            <li>
-              <h4>{{ amenity.name }}</h4>
-            </li>
-            (% endfor %)
+            {% for amenity in amenities|sort(attribute='name') %}
+            <li><h4>{{ amenity.name }}</h4></li>
+            {% endfor %}
           </ul>
         </div>
       </section>
     </div>
     <footer>
-      <div>
-        <p>Holberton School</p>
-      </div>
+      <p>Holberton School</p>
     </footer>
   </body>
 </html>
