--- a/web_flask/templates/8-cities_by_states.html
+++ b/web_flask/templates/8-cities_by_states.html
@@ -8,10 +8,10 @@
 <body>
     <h1>States</h1>
     <ul>
-        {% for state in states %}
+        {% for state in states|sort(attribute='name') %}
             <li>{{ state.id }}: <b>{{ state.name }}</b></li>
             <ul>
-                {% for city in state.cities %}
+                {% for city in state.cities|sort(attribute='name') %}
                     <li>{{ city.id }}: <b>{{ city.name }}</b></li>
                 {% endfor %}
             </ul>
