--- a/web_flask/templates/6-number_odd_or_even.html
+++ b/web_flask/templates/6-number_odd_or_even.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta charset="UTF-8" />
-    <title>HBNB</title>
-  </head>
-  <body>
-    <h1>Number: {{ number }} is {{ number_odd_or_even }}</h1>
-  </body>
-</html>
+<HTML lang="en">
+  <HEAD>
+    <META name="viewport" content="width=device-width, initial-scale=1.0" />
+    <META charset="UTF-8" />
+    <TITLE>HBNB</TITLE>
+  </HEAD>
+  <BODY>
+    <H1>Number: {{ number }} is {{ number_odd_or_even }}</H1>
+  </BODY>
+</HTML>
