--- a/web_flask/templates/7-states_list.html
+++ b/web_flask/templates/7-states_list.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta charset="UTF-8" />
-    <title>HBNB</title>
-  </head>
-  <body>
-    <h1>States</h1>
-    <ul>
+<HTML lang="en">
+  <HEAD>
+    <META name="viewport" content="width=device-width, initial-scale=1.0" />
+    <META charset="UTF-8" />
+    <TITLE>HBNB</TITLE>
+  </HEAD>
+  <BODY>
+    <H1>States</H1>
+    <UL>
       {% for state in states %}
-      <li>{{ state.id }}: <b>{{ state.name }}</b></li>
+      <LI>{{ state.id }}: <B>{{ state.name }}</B></LI>
       {% endfor %}
-    </ul>
-  </body>
-</html>
+    </UL>
+  </BODY>
+</HTML>
