--- a/web_flask/templates/8-cities_by_states.html
+++ b/web_flask/templates/8-cities_by_states.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta charset="UTF-8">
-    <title>HBNB</title>
-</head>
-<body>
-    <h1>States</h1>
-    <ul>
+<HTML lang="EN">
+<HEAD>
+    <META name="viewport" content="width=device-width, initial-scale=1.0">
+    <META charset="UTF-8">
+    <TITLE>HBNB</TITLE>
+</HEAD>
+<BODY>
+    <H1>States</H1>
+    <UL>
         {% for state in states|sort(attribute='name') %}
-            <li>{{ state.id }}: <b>{{ state.name }}</b></li>
-            <ul>
+            <LI>{{ state.id }}: <B>{{ state.name }}</B></LI>
+            <UL>
                 {% for city in state.cities|sort(attribute='name') %}
-                    <li>{{ city.id }}: <b>{{ city.name }}</b></li>
+                    <LI>{{ city.id }}: <B>{{ city.name }}</B></LI>
                 {% endfor %}
-            </ul>
+            </UL>
         {% endfor %}
-</body>
-</html>
+</BODY>
+</HTML>
