Fix - Refactored code

--- a/web_flask/templates/7-states_list.html
+++ b/web_flask/templates/7-states_list.html
@@ -8,9 +8,11 @@
   <BODY>
     <H1>States</H1>
     <UL>
+      {% if states %}
       {% for state in states %}
       <LI>{{ state.id }}: <B>{{ state.name }}</B></LI>
       {% endfor %}
+      {% endif %}
     </UL>
   </BODY>
 </HTML>
