--- a/web_flask/templates/9-states.html
+++ b/web_flask/templates/9-states.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta charset="UTF-8" />
-    <title>HBNB</title>
-  </head>
-  <body>
+<HTML lang="EN">
+  <HEAD>
+    <META name="viewport" content="width=device-width, initial-scale=1.0" />
+    <META charset="UTF-8" />
+    <TITLE>HBNB</TITLE>
+  </HEAD>
+  <BODY>
     {% if error %}
-    <h1>Not found</h1>
+    <H1>Not found</H1>
     {% else %} {% if id %}
-    <h1>State: {{ state.name }}</h1>
-    <h3>Cities:</h3>
-    <ul>
+    <H1>State: {{ state.name }}</H1>
+    <H3>Cities:</H3>
+    <UL>
       {% for city in state.cities|sort(attribute='name') %}
-      <li>{{ city.id }}: <b>{{ city.name }}</b></li>
+      <LI>{{ city.id }}: <B>{{ city.name }}</B></LI>
       {% endfor %}
-    </ul>
+    </UL>
     {% else %}
-    <ul>
+    <UL>
       {% for state in all_states|sort(attribute='name') %}
-      <li>
-        {{ state.id }}: <b>{{ state.name }}</b>
-        <ul>
+      <LI>
+        {{ state.id }}: <B>{{ state.name }}</B>
+        <UL>
           {% for city in state.cities|sort(attribute='name') %}
-          <li>{{ city.id }}: <b>{{ city.name }}</b></li>
+          <LI>{{ city.id }}: <B>{{ city.name }}</B></LI>
           {% endfor %}
-        </ul>
-      </li>
+        </UL>
+      </LI>
       {% endfor %}
-    </ul>
+    </UL>
     {% endif %} {% endif %}
-  </body>
-</html>
+  </BODY>
+</HTML>
